2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-17  Richard Hult  <richard@imendio.com>

	* src/planner-print-dialog.c: (ensure_dir), (get_config_filename),
	(planner_print_dialog_load_config),
	(planner_print_dialog_save_config), (print_dialog_create_page):
	Fix indentation, factor out printing config file location code,
	handle not being able to find it. Remove libgnome stuff.
	
	* src/planner-table-print-sheet.c: (table_print_sheet_print_cell),
	(table_print_sheet_print_page), (table_print_sheet_foreach_row):
	Handle printing empty resource and task names. Fix indentation.

2004-08-15  Richard Hult  <richard@imendio.com>

	* configure.in: Remove unused dependencies.

	* src/planner-eds-plugin.c: Remove libgnome includes.

	* src/eel-canvas-rect.c: (eel_canvas_rect_init),
	(eel_canvas_rect_finalize), (eel_canvas_rect_update),
	(eel_canvas_rect_realize), (eel_canvas_rect_unrealize): Get rid of
	libgnome includes.

2004-08-11  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_about_cb): Change
	translator_credits to translator-credits on request from the i18n
	guys. Update the planner link.

2004-08-12  Alvaro del Castillo  <acs@barrapunto.com>
	
	* libplanner-1.pc.in: removed hard coded Postgres flags

2004-08-12  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c:
	(eds_find_resource): search if a resource was imported.
	(eds_import_resource): checks if a resource was imported and update
	it if it was already in the resource list.
	
2004-08-11  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c:
	Store the e-d-s UID as a custom property in resources.
	
2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c: 
	Fixed castings and some little style issues

2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>

	* configure.in:
	* src/Makefile.am:
	Added support for enable evolution data server (eds) plugin