@@ -1,3 +1,8 @@
+2004-08-27  Xavier Ordoquy  <xordoquy@linovia.com>
+
+	* data/ui/sql-plugin.ui:
+	open/save are now in the import/export placeholders.
+
 2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Add «nb» to ALL_LINGUAS.
